--- a/catalogo-productos.html
+++ b/catalogo-productos.html
@@ -74,9 +74,24 @@
             margin: 2px 0 0 0;
         }
 
-        .sidebar-nav {
-            padding: 1rem 0;
-        }
+.sidebar-nav {
+    padding: 1rem 0;
+    max-height: calc(100vh - 250px);
+    overflow-y: auto;
+}
+
+.sidebar-nav::-webkit-scrollbar {
+    width: 6px;
+}
+
+.sidebar-nav::-webkit-scrollbar-track {
+    background: rgba(255,255,255,0.05);
+}
+
+.sidebar-nav::-webkit-scrollbar-thumb {
+    background: rgba(255,255,255,0.2);
+    border-radius: 3px;
+}
 
         .nav-section {
             margin-bottom: 1.5rem;
