--- a/qr-generator.html
+++ b/qr-generator.html
@@ -273,18 +273,17 @@
                             >
                         </div>
 
-                        <div class="form-group">
-                            <label class="form-label" for="numeroMesa">Número de Mesa *</label>
-                            <input 
-                                type="number" 
-                                id="numeroMesa" 
-                                class="form-input" 
-                                placeholder="Ej: 5"
-                                min="1"
-                                required
-                            >
-                        </div>
-
+<div class="form-group">
+    <label class="form-label" for="numeroMesa">Nombre/Número de Mesa *</label>
+    <input 
+        type="text" 
+        id="numeroMesa" 
+        class="form-input" 
+        placeholder="Ej: 5, Mesa A, VIP1"
+        maxlength="20"
+        required
+    >
+</div>
                         <div class="form-group">
                             <label class="form-label" for="sede">Sede (Opcional)</label>
                             <input 
