--- a/administrador.html
+++ b/administrador.html
@@ -948,6 +948,10 @@
         </div>
 
         <nav class="sidebar-nav">
+
+            <div class="nav-section-title">Portafolio JC</div>
+            <a href="https://jc-portafolio1.netlify.app" class="menu-link" target="_blank"> 📱 Mas programas de JC</a>
+
             <div class="nav-section-title">Principal</div>
             <a href="productos.html" class="nav-item">
                 <span class="nav-icon">📦</span>
