--- a/administrador.html
+++ b/administrador.html
@@ -950,7 +950,10 @@
         <nav class="sidebar-nav">
 
             <div class="nav-section-title">Portafolio JC</div>
-            <a href="https://jc-portafolio1.netlify.app" class="menu-link" target="_blank"> 📱 Mas programas de JC</a>
+            <a href="https://jc-portafolio1.netlify.app" class="nav-item">
+                <span class="nav-icon">📱</span>
+                <span> Mas programas de JC</span>
+            </a>
 
             <div class="nav-section-title">Principal</div>
             <a href="productos.html" class="nav-item">
