--- a/administrador.html
+++ b/administrador.html
@@ -958,7 +958,7 @@
             <div class="nav-section-title">Principal</div>
             <a href="productos.html" class="nav-item">
                 <span class="nav-icon">📦</span>
-                <span>Productos</span>
+                <span>platos</span>
             </a>
             <a href="pedidos.html" class="nav-item">
                 <span class="nav-icon">🍽️</span>
@@ -984,6 +984,12 @@
                 <span class="nav-icon">📜📦</span>
                 <span>Inventario</span>
             </a>
+
+                        <a href="alimentos.html" class="nav-item">
+                <span class="nav-icon">📦</span>
+                <span>Productos</span>
+            </a>
+            
             
             <div class="nav-section-title">Administración</div>
             <a href="administrador.html" class="nav-item active">
