--- a/productos.html
+++ b/productos.html
@@ -455,6 +455,12 @@
             <span class="nav-icon">📜📦</span>
             <span>Inventario</span>
         </a>
+
+                                <a href="alimentos.html" class="nav-item">
+                <span class="nav-icon">📦</span>
+                <span>Productos</span>
+            </a>
+            
     </div>
 
     <!-- SOLO PARA ADMINISTRADORES -->
